# ColluSleuth_LLM

./: .env.example  .gitignore  LOG_SCHEMA.json  LOG_SCHEMA.md  README.md  agent.py  config.py  detector_agent.py  evaluation.py  generate_paper_tables_and_figures.py  hotpot_loader.py  ideas.md  logger.py  models.py  parallel_experiment_runner.py  permission_manager.py  prompt_injection.py  pyproject.toml  rate_limiter.py  requirements.txt  role_assigner.py  run_pilot.py  simulation.py  swebench_loader.py
.github/workflows/: azure-manual-smoke.yml  ci.yml
MLSecurity_Project/: LOG_SCHEMA.json  README.md  agent.py  clean_results.py  detector_agent.py  evaluation.py  generate_paper_tables_and_figures.py  models.py  parallel_experiment_runner.py  permission_manager.py  prompt_injection.py  rerun_code_synthesis_matrix.py  rerun_knowledge_qa_matrix.py  role_assigner.py  run_pilot.py  simulation.py  tiny_code_synthesis_pilot.py  validation_pilot.py
docs/: consensus-mechanisms-fixed.md  consensus-mechanisms.md  consensus_system.md  mas_system.md  threat_model.md
docs/superpowers/plans/: 2026-05-01-covert-collusive-hotpot-package-refactor.md  2026-05-03-domain-agnostic-infra.md
docs/superpowers/specs/: 2026-05-01-covert-collusive-hotpot-package-refactor-design.md  2026-05-03-code-synthesis-domain-design.md  2026-05-03-domain-agnostic-infra-design.md
src/covert_collusive_hotpot/: __init__.py  evaluate_code_synthesis.py  generate_paper_assets.py  run_experiments.py
src/covert_collusive_hotpot/agents/: __init__.py  detector.py  worker.py
src/covert_collusive_hotpot/core/: __init__.py  config.py  logging_store.py  permission_manager.py  rate_limiter.py
src/covert_collusive_hotpot/domains/: __init__.py  base.py  registry.py
src/covert_collusive_hotpot/domains/code_synthesis/: __init__.py  detector_tools.py  domain.py  reporting.py
src/covert_collusive_hotpot/domains/knowledge_qa/: __init__.py  domain.py  reporting.py
src/covert_collusive_hotpot/experiments/: __init__.py  evaluation.py  hotpot_loader.py  prompt_injection.py  role_assignment.py  runner.py  simulation.py  swebench_loader.py
tests/: README.md  test_code_synthesis_domain.py  test_domain_registry.py  test_domain_reporting.py  test_evaluation.py  test_hotpot_loader.py  test_package_entrypoints.py  test_permission_manager.py  test_role_assignment.py  test_runner_contracts.py
