[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covert-collusive-hotpot"
version = "0.1.0"
description = "Collusive covert-attack HotpotQA experiment package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ag2[openai]>=0.3.0",
  "python-dotenv>=0.19.0",
  "pydantic>=2.0.0",
  "pytest>=7.0.0",
  "aiohttp>=3.8.0",
  "tenacity>=8.0.0",
  "bandit>=1.7.5",
  "datasets>=2.14.0",
  "beautifulsoup4>=4.12.0",
  "ghapi>=1.0.4",
  "unidiff>=0.7.5",
  "lxml>=4.9.0",
  "tqdm>=4.65.0",
  "requests>=2.31.0",
  "scipy>=1.11.0",
  "pandas>=2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
