[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covert-collusive-hotpot"
version = "0.1.0"
description = "Collusive covert-attack HotpotQA experiment package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ag2[openai]>=0.3",
  "python-dotenv>=0.19",
  "pydantic>=2.0",
  "datasets>=4.8",
  "fsspec>=2023.12.0",
  "huggingface-hub>=0.25.0,<2.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
